# traffic_predictor

./: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: ci.yaml
src/traffic_predictor/io/: datasets.py
tests/: conftest.py
tests/data/: sample_data_read.csv
tests/io/: test_datasets.py
