[tool.poetry]
name = "traffic-predictor"
version = "0.1.0"
description = "traffic prediction"
authors = ["mohamed-lahna <mohamed.lahna@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pydantic = "^2.10.3"
mlflow = "^2.19.0"
scikit-learn = ">=1.0.1,<1.6.0"
darts = "^0.32.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
matplotlib = "^3.10.0"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"

[tool.ruff] 
# automatic fix when possible
fix = true 
# define the default indent width
indent-width = 4 
# define the default line length 
line-length = 100 
# define the default python version 
target-version = "py313" 

[tool.ruff.lint.per-file-ignores] 
# exceptions for docstrings in tests 
"tests/*.py" = ["D100", "D103"]

[tool.mypy]
# improve error messages
pretty = true
# enhance strictness level
strict = true
# specify the python version
python_version = "3.12"
# check untyped definitions
check_untyped_defs = true
# all missing imports in code
ignore_missing_imports = true
# enable additional mypy plugins
plugins = ["pandera.mypy", "pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
